# portfolio

./: .gitignore  BUILDING.md  Cargo.toml  Justfile  README.md  Trunk.toml
.github/workflows/: build-and-push.yml
core/backend/: Cargo.toml  build.rs
core/backend/src/: main.rs
core/backend/src/models/: mod.rs  reviews.rs  setting.rs  social.rs  socials.rs  variables.rs
core/backend/src/routes/: github.rs  mod.rs  reviews.rs  settings.rs  variables.rs
core/backend/src/utils/: mod.rs
core/backend/src/utils/application/: context.rs  environment.rs  mod.rs
core/backend/src/utils/database/: connection.rs  generic_repository.rs  mod.rs  settings.rs  variables.rs
core/backend/src/utils/extractors/: authentication.rs
core/backend/src/utils/misc/: mod.rs
core/backend/src/utils/requests/: authentication.rs  error_transformer.rs  github.rs  mod.rs
core/frontend/: Cargo.toml  build.rs  index.html
core/frontend/assets/: cursor.cur
core/frontend/css/: imports.scss  index.scss
core/frontend/css/components/: language_selection.scss  presentation_link.scss  socials_bar.scss  text_scroller.scss
core/frontend/css/sections/: presentation.scss  top.scss
core/frontend/src/: app.rs  main.rs
core/frontend/src/components/: language_selection.rs  mod.rs  presentation_link.rs  socials_bar.rs  text_scroller.rs
core/frontend/src/sections/: mod.rs  presentation.rs  showcase.rs  top.rs
core/frontend/src/utils/: language.rs  mod.rs
core/frontend/src/utils/application/: context.rs  mod.rs
docker/: dev.docker-compose.yml  dev.dockerfile  prod.dockerfile
infrastructure/dev/docker/: .gitignore  Dockerfile  docker-compose.yml
infrastructure/prod/terraform/: variables.tf
migrations/: reviews.sql  schemas.hcl  settings.sql  socials.sql  variables.sql
terraform/: main.tf  resources.tf  variables.tf
translations/components/: socials_bar.toml
translations/sections/: top.toml
