[package]
name = "backend"
version = "0.0.1"
description = "My portfolio backend."
edition = "2024"
readme = "README.md"
repository = "https://github.com/stifskere/portfolio"
license = "MIT OR Apache-2.0"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix_failwrap = "1.0.3"
base64 = "0.22.1"
bcrypt = "0.17.1"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
email_address = "0.2.9"
envconfig = "0.11.0"
# Updating this is impossible as last version is broken.
jsonwebtoken = "=9.0.0"
log = "0.4.28"
octocrab = "0.47.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-async-std"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
yew_icons = { version = "0.8.0", features = ["lucide"] }

[build-dependencies]
dotenvy = "0.15.7"
