[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.11.0"
log = "0.4.28"
palette = "0.7.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-web = "0.1.3"
wasm-bindgen = "=0.2.100"
web-sys = { version = "0.3.70", features = ["Element", "HtmlElement", "ScrollBehavior", "ScrollToOptions"] }
yew = { version="0.21", features=["csr"] }
yew_icons = { version = "0.8.0", features = ["lucide"] }
