[package]
name = "frontend"
version = "0.0.1"
edition = "2021"
description = "My portfolio frontend."
readme = "README.md"
repository = "https://github.com/stifskere/portfolio"
license = "MIT OR Apache-2.0"

[dependencies]
gloo = "0.11.0"
log = "0.4.28"
palette = "0.7.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-web = "0.1.3"
translatable = "1.0.0"
wasm-bindgen = "=0.2.100"
web-sys = { version = "0.3.70", features = ["Navigator"], default-features = false }
wee_alloc = "0.4.5"
yew = { version="0.21", features=["csr"] }
yew_icons = { version = "0.8.0", features = ["BootstrapGithub", "BootstrapEnvelopeAtFill", "BootstrapLinkedin"] }

[build-dependencies]
chrono = "0.4.42"
